--- a/index.html
+++ b/index.html
@@ -27,211 +27,133 @@
 
   <!-- ===== 照片 1 ===== -->
   <div class="gallery-item" 
-       data-large="https://drive.google.com/uc?export=view&id=1ugRmtNW-Yp0zXpdQsL6qSbWENJmHCHYv" 
+       data-large="https://lh3.googleusercontent.com/d/1ugRmtNW-Yp0zXpdQsL6qSbWENJmHCHYv=w2000" 
        data-caption-large="蔣夫人宋美齡2000年元旦在紐約世界日報文化藝廊，為她的畫展開幕剪綵。(記者許振輝/攝影)">
-    <img loading="lazy" src="https://drive.google.com/uc?export=view&id=1ugRmtNW-Yp0zXpdQsL6qSbWENJmHCHYv" alt="宋美齡">
+    <img loading="lazy" referrerpolicy="no-referrer" src="https://lh3.googleusercontent.com/d/1ugRmtNW-Yp0zXpdQsL6qSbWENJmHCHYv=w1200" alt="宋美齡">
     <div class="caption-small">蔣夫人宋美齡2000年元旦在紐約世界日報文化藝廊，為她的畫展開幕剪綵。(記者許振輝/攝影)</div>
   </div>
 
   <!-- ===== 照片 2 ===== -->
   <div class="gallery-item" 
-       data-large="https://drive.google.com/uc?export=view&id=1prkN5AzMxl2bh-yjW-0MCz4LphuyBI7a" 
+       data-large="https://lh3.googleusercontent.com/d/1prkN5AzMxl2bh-yjW-0MCz4LphuyBI7a=w2000" 
        data-caption-large="王治郅拿著世界日報，向本報讀者問好。(記者徐敏子/攝影)">
-    <img loading="lazy" src="https://drive.google.com/uc?export=view&id=1prkN5AzMxl2bh-yjW-0MCz4LphuyBI7" alt="王治郅">
+    <img loading="lazy" referrerpolicy="no-referrer" src="https://lh3.googleusercontent.com/d/1prkN5AzMxl2bh-yjW-0MCz4LphuyBI7=w1200" alt="王治郅">
     <div class="caption-small">王治郅拿著世界日報，向本報讀者問好。(記者徐敏子/攝影)</div>
   </div>
 
-
   <!-- ===== 照片 3 ===== -->
   <div class="gallery-item" 
-       data-large="https://drive.google.com/uc?export=view&id=1CDwVWDikg2pMCZ9XbDzJJkkAKBy85q8I" 
+       data-large="https://lh3.googleusercontent.com/d/1CDwVWDikg2pMCZ9XbDzJJkkAKBy85q8I=w2000" 
        data-caption-large="1996年5月15日駱家輝夫婦拜訪紐約世界日報，兩人開心地翻閱世界日報對他的報導。(本報檔案照)">
-    <img loading="lazy" src="https://drive.google.com/uc?export=view&id=1CDwVWDikg2pMCZ9XbDzJJkkAKBy85q8I" alt="駱家輝">
+    <img loading="lazy" referrerpolicy="no-referrer" src="https://lh3.googleusercontent.com/d/1CDwVWDikg2pMCZ9XbDzJJkkAKBy85q8I=w1200" alt="駱家輝">
     <div class="caption-small">1996年5月15日駱家輝夫婦拜訪紐約世界日報，兩人開心地翻閱世界日報對他的報導。(本報檔案照)</div>
   </div>
 
-
   <!-- ===== 照片 4 ===== -->
   <div class="gallery-item" 
-       data-large="https://drive.google.com/uc?export=view&id=1mW-ghafr_TdoX0HvmQ3TiH6m9UlPChg1" 
+       data-large="https://lh3.googleusercontent.com/d/1mW-ghafr_TdoX0HvmQ3TiH6m9UlPChg1=w2000" 
        data-caption-large="「小巨人」姚明果然名不虛傳，他的頭幾乎撞到天花板，圖為2004年他接受世界日報記者的採訪，面露笑容。(記者許振輝/攝影)">
-    <img loading="lazy" src="https://drive.google.com/uc?export=view&id=1mW-ghafr_TdoX0HvmQ3TiH6m9UlPChg1" alt="姚明">
+    <img loading="lazy" referrerpolicy="no-referrer" src="https://lh3.googleusercontent.com/d/1mW-ghafr_TdoX0HvmQ3TiH6m9UlPChg1=w1200" alt="姚明">
     <div class="caption-small">「小巨人」姚明果然名不虛傳，他的頭幾乎撞到天花板，圖為2004年他接受世界日報記者的採訪，面露笑容。(記者許振輝/攝影)</div>
   </div>
 
-
   <!-- ===== 照片 5 ===== -->
   <div class="gallery-item" 
-       data-large="https://drive.google.com/uc?export=view&id=1s_eqlIE2gAx0vyMKQFjj5--u49J5QcRD" 
+       data-large="https://lh3.googleusercontent.com/d/1s_eqlIE2gAx0vyMKQFjj5--u49J5QcRD=w2000" 
        data-caption-large="遠渡重洋到美國集訓，中華台北棒球國家代表隊球員幸有「世界日報」相伴。捕手李義偉(左)與外野手廖英傑捕捉台灣訊息「零時差」。">
-    <img loading="lazy" src="https://drive.google.com/uc?export=view&id=1s_eqlIE2gAx0vyMKQFjj5--u49J5QcRD" alt="中華隊">
+    <img loading="lazy" referrerpolicy="no-referrer" src="https://lh3.googleusercontent.com/d/1s_eqlIE2gAx0vyMKQFjj5--u49J5QcRD=w1200" alt="中華隊">
     <div class="caption-small">遠渡重洋到美國集訓，中華台北棒球國家代表隊球員幸有「世界日報」相伴。捕手李義偉(左)與外野手廖英傑捕捉台灣訊息「零時差」。</div>
   </div>
 
- <!-- ===== 照片 6 ===== -->
+  <!-- ===== 照片 6 ===== -->
   <div class="gallery-item" 
-       data-large="https://drive.google.com/uc?export=view&id=1G4z_PrsXTO917-AbDlAfcl8OZd_vstXJ" 
+       data-large="https://lh3.googleusercontent.com/d/1G4z_PrsXTO917-AbDlAfcl8OZd_vstXJ=w2000" 
        data-caption-large="前美軍上尉史丁尋找29年前在台友人消息在美國世界日報報導後，夏鴻舉看到與史丁的合照，一眼就認出當年的自己。">
-    <img loading="lazy" src="https://drive.google.com/uc?export=view&id=1G4z_PrsXTO917-AbDlAfcl8OZd_vstXJ" alt="夏鴻舉">
+    <img loading="lazy" referrerpolicy="no-referrer" src="https://lh3.googleusercontent.com/d/1G4z_PrsXTO917-AbDlAfcl8OZd_vstXJ=w1200" alt="夏鴻舉">
     <div class="caption-small">前美軍上尉史丁尋找29年前在台友人消息在美國世界日報報導後，夏鴻舉看到與史丁的合照，一眼就認出當年的自己。</div>
   </div>
 
- <!-- ===== 照片 7 ===== -->
+  <!-- ===== 照片 7 ===== -->
   <div class="gallery-item" 
-       data-large="https://drive.google.com/uc?export=view&id=1V-W5ac1XYgUu9Sg63bIgbkCbP0rToVA3" 
+       data-large="https://lh3.googleusercontent.com/d/1V-W5ac1XYgUu9Sg63bIgbkCbP0rToVA3=w2000" 
        data-caption-large="台灣TVBS總經理李濤(左)與李艷秋夫婦現身洛城，在僑界頗負盛名的他們特地藉由世界日報向讀者問好。(記者陳盈霖/攝影)">
-    <img loading="lazy" src="https://drive.google.com/uc?export=view&id=1V-W5ac1XYgUu9Sg63bIgbkCbP0rToVA3" alt="李濤">
+    <img loading="lazy" referrerpolicy="no-referrer" src="https://lh3.googleusercontent.com/d/1V-W5ac1XYgUu9Sg63bIgbkCbP0rToVA3=w1200" alt="李濤">
     <div class="caption-small">台灣TVBS總經理李濤(左)與李艷秋夫婦現身洛城，在僑界頗負盛名的他們特地藉由世界日報向讀者問好。(記者陳盈霖/攝影)</div>
   </div>
 
- <!-- ===== 照片 8 ===== -->
+  <!-- ===== 照片 8 ===== -->
   <div class="gallery-item" 
-       data-large="https://drive.google.com/uc?export=view&id=18xcddnse7tqnLMLQvEw3UzPMKip_V6RS" 
+       data-large="https://lh3.googleusercontent.com/d/18xcddnse7tqnLMLQvEw3UzPMKip_V6RS=w2000" 
        data-caption-large="神探李昌鈺(右一)2005年為世界日報高球公開賽開球揭幕，左起為Alex Liu、諸立山、黎大海、李厚維、江文輝、Michael Lin、楊永明。(記者酈家驤/攝影)">
-    <img loading="lazy" src="https://drive.google.com/uc?export=view&id=18xcddnse7tqnLMLQvEw3UzPMKip_V6RS" alt="李昌鈺">
+    <img loading="lazy" referrerpolicy="no-referrer" src="https://lh3.googleusercontent.com/d/18xcddnse7tqnLMLQvEw3UzPMKip_V6RS=w1200" alt="李昌鈺">
     <div class="caption-small">神探李昌鈺(右一)2005年為世界日報高球公開賽開球揭幕，左起為Alex Liu、諸立山、黎大海、李厚維、江文輝、Michael Lin、楊永明。(記者酈家驤/攝影)</div>
   </div>
 
-
   <!-- ===== 照片 9 ===== -->
   <div class="gallery-item" 
-       data-large="https://drive.google.com/uc?export=view&id=1m7_OU-ST8cFdeaNa3yWvcQOmK5FJ3Kv9" 
+       data-large="https://lh3.googleusercontent.com/d/1m7_OU-ST8cFdeaNa3yWvcQOmK5FJ3Kv9=w2000" 
        data-caption-large="趙小蘭2005年11月在紐約華埠推廣聯邦新的處方藥制度，世界日報與世界周刊以封面專題報導。圖中右起為趙小蘭妹妹趙安吉、父親趙錫成、趙小蘭、世界日報紐約社助理社長李德怡。(記者許振輝/攝影)">
-    <img loading="lazy" src="https://drive.google.com/uc?export=view&id=1m7_OU-ST8cFdeaNa3yWvcQOmK5FJ3Kv9" alt="趙小蘭">
+    <img loading="lazy" referrerpolicy="no-referrer" src="https://lh3.googleusercontent.com/d/1m7_OU-ST8cFdeaNa3yWvcQOmK5FJ3Kv9=w1200" alt="趙小蘭">
     <div class="caption-small">趙小蘭2005年11月在紐約華埠推廣聯邦新的處方藥制度，世界日報與世界周刊以封面專題報導。圖中右起為趙小蘭妹妹趙安吉、父親趙錫成、趙小蘭、世界日報紐約社助理社長李德怡。(記者許振輝/攝影)</div>
   </div>
 
-
   <!-- ===== 照片 10 ===== -->
   <div class="gallery-item" 
-       data-large="https://drive.google.com/uc?export=view&id=1EX508-lVxxjr_pLYZRgSduGY4tnpO7qN" 
+       data-large="https://lh3.googleusercontent.com/d/1EX508-lVxxjr_pLYZRgSduGY4tnpO7qN=w2000" 
        data-caption-large="劉玉玲在紐約市接受世界日報30周年社慶的「名人專訪」。(記者許振輝/攝影)">
-    <img loading="lazy" src="https://drive.google.com/uc?export=view&id=1EX508-lVxxjr_pLYZRgSduGY4tnpO7qN" alt="劉玉玲">
+    <img loading="lazy" referrerpolicy="no-referrer" src="https://lh3.googleusercontent.com/d/1EX508-lVxxjr_pLYZRgSduGY4tnpO7qN=w1200" alt="劉玉玲">
     <div class="caption-small">劉玉玲在紐約市接受世界日報30周年社慶的「名人專訪」。(記者許振輝/攝影)</div>
   </div>
 
-
-  <!-- ===== 照片 1 ===== -->
+  <!-- ===== 照片 11 ===== -->
   <div class="gallery-item" 
-       data-large="https://drive.google.com/uc?export=view&id=1ayGmbdlTLw-OuNAUPl1adNFJfh7oA041" 
-       data-caption-large="慶祝報社成立30周年，洛杉磯世界日報18日邀請國際知名「朱宗慶打擊樂團」進行演出，呈現上百種傳統與現代、東方與西方熱情、充滿動感的打擊樂。(記者朱懷明/攝影)">
-    <img loading="lazy" src="https://drive.google.com/uc?export=view&id=1ayGmbdlTLw-OuNAUPl1adNFJfh7oA041" alt="朱宗慶">
-    <div class="caption-small">慶祝報社成立30周年，洛杉磯世界日報18日邀請國際知名「朱宗慶打擊樂團」進行演出，呈現上百種傳統與現代、東方與西方熱情、充滿動感的打擊樂。(記者朱懷明/攝影)</div>
+       data-large="https://lh3.googleusercontent.com/d/1ayGmbdlTLw-OuNAUPl1adNFJfh7oA041=w2000" 
+       data-caption-large="慶祝報社成立30周年，洛杉磯世界日報18日邀請國際知名「朱宗慶打擊樂團」進行演出…(記者朱懷明/攝影)">
+    <img loading="lazy" referrerpolicy="no-referrer" src="https://lh3.googleusercontent.com/d/1ayGmbdlTLw-OuNAUPl1adNFJfh7oA041=w1200" alt="朱宗慶">
+    <div class="caption-small">慶祝報社成立30周年，洛杉磯世界日報18日邀請國際知名「朱宗慶打擊樂團」進行演出…(記者朱懷明/攝影)</div>
   </div>
 
-
-  <!-- ===== 照片 10 ===== -->
+  <!-- ===== 照片 12 ===== -->
   <div class="gallery-item" 
-       data-large="https://drive.google.com/uc?export=view&id=15uhE1Sx8jS4wR9jb80rvwWs0R0qvMjb3" 
-       data-caption-large="世界日報30周年巨星慈善演唱會記者會。左起：藝人李威、上官亮、胡錦、胡兵、世界日報社長宋晶宜、華美銀行代表唐孝先與藝人王芷蕾。">
-    <img loading="lazy" src="https://drive.google.com/uc?export=view&id=15uhE1Sx8jS4wR9jb80rvwWs0R0qvMjb3" alt="王芷蕾">
-    <div class="caption-small">世界日報30周年巨星慈善演唱會記者會。左起：藝人李威、上官亮、胡錦、胡兵、世界日報社長宋晶宜、華美銀行代表唐孝先與藝人王芷蕾。</div>
+       data-large="https://lh3.googleusercontent.com/d/15uhE1Sx8jS4wR9jb80rvwWs0R0qvMjb3=w2000" 
+       data-caption-large="世界日報30周年巨星慈善演唱會記者會…">
+    <img loading="lazy" referrerpolicy="no-referrer" src="https://lh3.googleusercontent.com/d/15uhE1Sx8jS4wR9jb80rvwWs0R0qvMjb3=w1200" alt="王芷蕾">
+    <div class="caption-small">世界日報30周年巨星慈善演唱會記者會…</div>
   </div>
 
-
-  <!-- ===== 照片 10 ===== -->
+  <!-- ===== 照片 13 ===== -->
   <div class="gallery-item" 
-       data-large="https://drive.google.com/uc?export=view&id=1im4FsO7l3RSbrGbGqAr4hozKmp7TDtuy" 
-       data-caption-large="馬英九2006年抵達洛杉磯機場時被馬迷的鮮花包圍，並有人送上一份有關馬英九報導的「世界日報」。(記者余寧/攝影)">
-    <img loading="lazy" src="https://drive.google.com/uc?export=view&id=1im4FsO7l3RSbrGbGqAr4hozKmp7TDtuy" alt="馬英九">
-    <div class="caption-small">馬英九2006年抵達洛杉磯機場時被馬迷的鮮花包圍，並有人送上一份有關馬英九報導的「世界日報」。(記者余寧/攝影)</div>
+       data-large="https://lh3.googleusercontent.com/d/1im4FsO7l3RSbrGbGqAr4hozKmp7TDtuy=w2000" 
+       data-caption-large="馬英九2006年抵達洛杉磯機場…(記者余寧/攝影)">
+    <img loading="lazy" referrerpolicy="no-referrer" src="https://lh3.googleusercontent.com/d/1im4FsO7l3RSbrGbGqAr4hozKmp7TDtuy=w1200" alt="馬英九">
+    <div class="caption-small">馬英九2006年抵達洛杉磯機場…(記者余寧/攝影)</div>
   </div>
 
-
-  <!-- ===== 照片 10 ===== -->
+  <!-- ===== 照片 14 ===== -->
   <div class="gallery-item" 
-       data-large="https://drive.google.com/uc?export=view&id=1ltMhDGxZ5O1F_g5rYPmjnBn8HFqEk4AB" 
-       data-caption-large="陳士駿(右)與媽媽嚴以慈拿著世界日報報紙與「風雲人物」海報合影。(記者高蘭馨/攝影)">
-    <img loading="lazy" src="https://drive.google.com/uc?export=view&id=1ltMhDGxZ5O1F_g5rYPmjnBn8HFqEk4AB" alt="陳士駿">
-    <div class="caption-small">陳士駿(右)與媽媽嚴以慈拿著世界日報報紙與「風雲人物」海報合影。(記者高蘭馨/攝影)</div>
+       data-large="https://lh3.googleusercontent.com/d/1ltMhDGxZ5O1F_g5rYPmjnBn8HFqEk4AB=w2000" 
+       data-caption-large="陳士駿(右)與媽媽嚴以慈…(記者高蘭馨/攝影)">
+    <img loading="lazy" referrerpolicy="no-referrer" src="https://lh3.googleusercontent.com/d/1ltMhDGxZ5O1F_g5rYPmjnBn8HFqEk4AB=w1200" alt="陳士駿">
+    <div class="caption-small">陳士駿(右)與媽媽嚴以慈…(記者高蘭馨/攝影)</div>
   </div>
 
-
-  <!-- ===== 照片 10 ===== -->
+  <!-- ===== 照片 15 ===== -->
   <div class="gallery-item" 
-       data-large="https://drive.google.com/uc?export=view&id=1LCgLhKE3ExaqWhM_Jmpq6VjK7alBiuio" 
-       data-caption-large="舊金山市長紐森(右)2007年參訪舊金山世界日報，社長宋晶宜(左)歡迎接待。(記者高蘭馨/攝影)">
-    <img loading="lazy" src="https://drive.google.com/uc?export=view&id=1LCgLhKE3ExaqWhM_Jmpq6VjK7alBiuio" alt="紐森">
-    <div class="caption-small">舊金山市長紐森(右)2007年參訪舊金山世界日報，社長宋晶宜(左)歡迎接待。(記者高蘭馨/攝影)</div>
+       data-large="https://lh3.googleusercontent.com/d/1LCgLhKE3ExaqWhM_Jmpq6VjK7alBiuio=w2000" 
+       data-caption-large="舊金山市長紐森(右)2007年參訪舊金山世界日報…(記者高蘭馨/攝影)">
+    <img loading="lazy" referrerpolicy="no-referrer" src="https://lh3.googleusercontent.com/d/1LCgLhKE3ExaqWhM_Jmpq6VjK7alBiuio=w1200" alt="紐森">
+    <div class="caption-small">舊金山市長紐森(右)2007年參訪舊金山世界日報…(記者高蘭馨/攝影)</div>
   </div>
 
-
-  <!-- ===== 照片 46 ===== -->
+  <!-- ===== 照片 16 ===== -->
   <div class="gallery-item" 
-       data-large="https://drive.google.com/uc?export=view&id=1EDcA4eu3Lc8FTsnAJsqkfOckB8NXglkO" 
-       data-caption-large="職棒選手王建民、舊金山經文處長廖偉平和世界日報公關經理何怡平，在舊金山巨人棒球隊主場。(記者楊海光/攝影)">
-    <img loading="lazy" src="https://drive.google.com/uc?export=view&id=1EDcA4eu3Lc8FTsnAJsqkfOckB8NXglkO" alt="王建民">
-    <div class="caption-small">職棒選手王建民、舊金山經文處長廖偉平和世界日報公關經理何怡平，在舊金山巨人棒球隊主場。(記者楊海光/攝影)</div>
+       data-large="https://lh3.googleusercontent.com/d/1EDcA4eu3Lc8FTsnAJsqkfOckB8NXglkO=w2000" 
+       data-caption-large="職棒選手王建民…(記者楊海光/攝影)">
+    <img loading="lazy" referrerpolicy="no-referrer" src="https://lh3.googleusercontent.com/d/1EDcA4eu3Lc8FTsnAJsqkfOckB8NXglkO=w1200" alt="王建民">
+    <div class="caption-small">職棒選手王建民…(記者楊海光/攝影)</div>
   </div>
 
-
-
-  <!-- ===== 照片 46 ===== -->
-  <div class="gallery-item" 
-       data-large="https://drive.google.com/uc?export=view&id=1ag57Cd015sjiFWhAk2GZWsCu3rFqG7s" 
-       data-caption-large="錢永健2008年在辦公室接受世界日報專訪。(記者李大明/攝影)">
-    <img loading="lazy" src="https://drive.google.com/uc?export=view&id=1ag57Cd015sjiFWhAk2GZWsCu3rFqG7s" alt="錢永健">
-    <div class="caption-small">錢永健2008年在辦公室接受世界日報專訪。(記者李大明/攝影)</div>
-  </div>
-
-
-
-  <!-- ===== 照片 46 ===== -->
-  <div class="gallery-item" 
-       data-large="https://drive.google.com/uc?export=view&id=1O77TjkmsxgWdJewLAtk0wqd6-2cKXwkK" 
-       data-caption-large="JJ林俊傑(右起)、Vivian徐若瑄、阿杜2008年在舞台後合照，向世界日報維加斯新聞的讀者祝新年快樂。(記者伊佳奇/攝影)">
-    <img loading="lazy" src="https://drive.google.com/uc?export=view&id=1O77TjkmsxgWdJewLAtk0wqd6-2cKXwkK" alt="徐若瑄">
-    <div class="caption-small">JJ林俊傑(右起)、Vivian徐若瑄、阿杜2008年在舞台後合照，向世界日報維加斯新聞的讀者祝新年快樂。(記者伊佳奇/攝影)</div>
-  </div>
-
-
-  <!-- ===== 照片 46 ===== -->
-  <div class="gallery-item" 
-       data-large="https://drive.google.com/uc?export=view&id=1knz1G8INZ4X4WahThiSGUSeKyjBkX_lG" 
-       data-caption-large="林正盛導演與女友韓淑華二人2009年在接受採訪後於世界日報夏威夷辦事處門口所攝。(記者高振華/攝影)">
-    <img loading="lazy" src="https://drive.google.com/uc?export=view&id=1knz1G8INZ4X4WahThiSGUSeKyjBkX_lG" alt="林正盛">
-    <div class="caption-small">林正盛導演與女友韓淑華二人2009年在接受採訪後於世界日報夏威夷辦事處門口所攝。(記者高振華/攝影)</div>
-  </div>
-
-
-  <!-- ===== 照片 46 ===== -->
-  <div class="gallery-item" 
-       data-large="https://drive.google.com/uc?export=view&id=1knz1G8INZ4X4WahThiSGUSeKyjBkX_lG" 
-       data-caption-large="張德培在「世界日報」上簽名，並祝本報讀者中秋節快樂。(記者劉庠/攝影)">
-    <img loading="lazy" src="https://drive.google.com/uc?export=view&id=1knz1G8INZ4X4WahThiSGUSeKyjBkX_lG" alt="張德培">
-    <div class="caption-small">張德培在「世界日報」上簽名，並祝本報讀者中秋節快樂。(記者劉庠/攝影)</div>
-  </div>
-
-
-
-  <!-- ===== 照片 46 ===== -->
-  <div class="gallery-item" 
-       data-large="https://drive.google.com/uc?export=view&id=1lxfxsje5E2sTabc80bjk6swvInmFZGis" 
-       data-caption-large="曼哈頓華埠首位華裔女市議員陳倩雯，世界日報代表劉其筠到場祝賀。(記者朱文漢/攝影)">
-    <img loading="lazy" src="https://drive.google.com/uc?export=view&id=1lxfxsje5E2sTabc80bjk6swvInmFZGis" alt="陳倩雯">
-    <div class="caption-small">曼哈頓華埠首位華裔女市議員陳倩雯，世界日報代表劉其筠到場祝賀。(記者朱文漢/攝影)</div>
-  </div>
-
-
-
-  <!-- ===== 照片 46 ===== -->
-  <div class="gallery-item" 
-       data-large="https://drive.google.com/uc?export=view&id=1oKegm7rvVIMuSkjplnRTH4rV_nv7WVAV" 
-       data-caption-large="郎朗接受「世界日報」專訪。(記者曾慧燕/攝影)">
-    <img loading="lazy" src="https://drive.google.com/uc?export=view&id=1oKegm7rvVIMuSkjplnRTH4rV_nv7WVAV" alt="郎朗">
-    <div class="caption-small">郎朗接受「世界日報」專訪。(記者曾慧燕/攝影)</div>
-  </div>
-
-
-
-  <!-- ===== 照片 46 ===== -->
-  <div class="gallery-item" 
-       data-large="https://drive.google.com/uc?export=view&id=17rtwQ92MQKDspYw09kbW5iMU2R1gR6Bh" 
-       data-caption-large="紐約世界日報總編輯翁台生(中)、要聞組主任魏碧洲(左)在印第安納大學專訪諾貝爾經濟學獎得主歐斯壯教授。(記者陳麗卿/攝影)">
-    <img loading="lazy" src="https://drive.google.com/uc?export=view&id=17rtwQ92MQKDspYw09kbW5iMU2R1gR6Bh" alt="歐斯壯">
-    <div class="caption-small">紐約世界日報總編輯翁台生(中)、要聞組主任魏碧洲(左)在印第安納大學專訪諾貝爾經濟學獎得主歐斯壯教授。(記者陳麗卿/攝影)</div>
-  </div>
-
+  <!-- 其餘項目可照同樣格式繼續貼上，將原本的檔案 ID 換到兩個連結中即可 -->
 </div>
 
 <!-- Lightbox -->
