--- a/index.html
+++ b/index.html
@@ -25,135 +25,167 @@
 <h1 style="margin:0 0 16px 0;">照片牆</h1>
 <div class="gallery" id="gallery">
 
-  <!-- ===== 照片 1 ===== -->
-  <div class="gallery-item" 
-       data-large="https://lh3.googleusercontent.com/d/1ugRmtNW-Yp0zXpdQsL6qSbWENJmHCHYv=w2000" 
-       data-caption-large="蔣夫人宋美齡2000年元旦在紐約世界日報文化藝廊，為她的畫展開幕剪綵。(記者許振輝/攝影)">
-    <img loading="lazy" referrerpolicy="no-referrer" src="https://lh3.googleusercontent.com/d/1ugRmtNW-Yp0zXpdQsL6qSbWENJmHCHYv=w1200" alt="宋美齡">
-    <div class="caption-small">蔣夫人宋美齡2000年元旦在紐約世界日報文化藝廊，為她的畫展開幕剪綵。(記者許振輝/攝影)</div>
+  <!-- ===== 32 張照片 ===== -->
+  <div class="gallery-item" data-large="img/01.jpg" data-caption-large="照片 01">
+    <img src="img/01.jpg" alt="照片01">
+    <div class="caption-small">照片 01</div>
   </div>
 
-  <!-- ===== 照片 2 ===== -->
-  <div class="gallery-item" 
-       data-large="https://lh3.googleusercontent.com/d/1prkN5AzMxl2bh-yjW-0MCz4LphuyBI7a=w2000" 
-       data-caption-large="王治郅拿著世界日報，向本報讀者問好。(記者徐敏子/攝影)">
-    <img loading="lazy" referrerpolicy="no-referrer" src="https://lh3.googleusercontent.com/d/1prkN5AzMxl2bh-yjW-0MCz4LphuyBI7=w1200" alt="王治郅">
-    <div class="caption-small">王治郅拿著世界日報，向本報讀者問好。(記者徐敏子/攝影)</div>
+  <div class="gallery-item" data-large="img/02.jpg" data-caption-large="照片 02">
+    <img src="img/02.jpg" alt="照片02">
+    <div class="caption-small">照片 02</div>
   </div>
 
-  <!-- ===== 照片 3 ===== -->
-  <div class="gallery-item" 
-       data-large="https://lh3.googleusercontent.com/d/1CDwVWDikg2pMCZ9XbDzJJkkAKBy85q8I=w2000" 
-       data-caption-large="1996年5月15日駱家輝夫婦拜訪紐約世界日報，兩人開心地翻閱世界日報對他的報導。(本報檔案照)">
-    <img loading="lazy" referrerpolicy="no-referrer" src="https://lh3.googleusercontent.com/d/1CDwVWDikg2pMCZ9XbDzJJkkAKBy85q8I=w1200" alt="駱家輝">
-    <div class="caption-small">1996年5月15日駱家輝夫婦拜訪紐約世界日報，兩人開心地翻閱世界日報對他的報導。(本報檔案照)</div>
+  <div class="gallery-item" data-large="img/03.jpg" data-caption-large="照片 03">
+    <img src="img/03.jpg" alt="照片03">
+    <div class="caption-small">照片 03</div>
   </div>
 
-  <!-- ===== 照片 4 ===== -->
-  <div class="gallery-item" 
-       data-large="https://lh3.googleusercontent.com/d/1mW-ghafr_TdoX0HvmQ3TiH6m9UlPChg1=w2000" 
-       data-caption-large="「小巨人」姚明果然名不虛傳，他的頭幾乎撞到天花板，圖為2004年他接受世界日報記者的採訪，面露笑容。(記者許振輝/攝影)">
-    <img loading="lazy" referrerpolicy="no-referrer" src="https://lh3.googleusercontent.com/d/1mW-ghafr_TdoX0HvmQ3TiH6m9UlPChg1=w1200" alt="姚明">
-    <div class="caption-small">「小巨人」姚明果然名不虛傳，他的頭幾乎撞到天花板，圖為2004年他接受世界日報記者的採訪，面露笑容。(記者許振輝/攝影)</div>
+  <div class="gallery-item" data-large="img/04.jpg" data-caption-large="照片 04">
+    <img src="img/04.jpg" alt="照片04">
+    <div class="caption-small">照片 04</div>
   </div>
 
-  <!-- ===== 照片 5 ===== -->
-  <div class="gallery-item" 
-       data-large="https://lh3.googleusercontent.com/d/1s_eqlIE2gAx0vyMKQFjj5--u49J5QcRD=w2000" 
-       data-caption-large="遠渡重洋到美國集訓，中華台北棒球國家代表隊球員幸有「世界日報」相伴。捕手李義偉(左)與外野手廖英傑捕捉台灣訊息「零時差」。">
-    <img loading="lazy" referrerpolicy="no-referrer" src="https://lh3.googleusercontent.com/d/1s_eqlIE2gAx0vyMKQFjj5--u49J5QcRD=w1200" alt="中華隊">
-    <div class="caption-small">遠渡重洋到美國集訓，中華台北棒球國家代表隊球員幸有「世界日報」相伴。捕手李義偉(左)與外野手廖英傑捕捉台灣訊息「零時差」。</div>
+  <div class="gallery-item" data-large="img/05.jpg" data-caption-large="照片 05">
+    <img src="img/05.jpg" alt="照片05">
+    <div class="caption-small">照片 05</div>
   </div>
 
-  <!-- ===== 照片 6 ===== -->
-  <div class="gallery-item" 
-       data-large="https://lh3.googleusercontent.com/d/1G4z_PrsXTO917-AbDlAfcl8OZd_vstXJ=w2000" 
-       data-caption-large="前美軍上尉史丁尋找29年前在台友人消息在美國世界日報報導後，夏鴻舉看到與史丁的合照，一眼就認出當年的自己。">
-    <img loading="lazy" referrerpolicy="no-referrer" src="https://lh3.googleusercontent.com/d/1G4z_PrsXTO917-AbDlAfcl8OZd_vstXJ=w1200" alt="夏鴻舉">
-    <div class="caption-small">前美軍上尉史丁尋找29年前在台友人消息在美國世界日報報導後，夏鴻舉看到與史丁的合照，一眼就認出當年的自己。</div>
+  <div class="gallery-item" data-large="img/06.jpg" data-caption-large="照片 06">
+    <img src="img/06.jpg" alt="照片06">
+    <div class="caption-small">照片 06</div>
   </div>
 
-  <!-- ===== 照片 7 ===== -->
-  <div class="gallery-item" 
-       data-large="https://lh3.googleusercontent.com/d/1V-W5ac1XYgUu9Sg63bIgbkCbP0rToVA3=w2000" 
-       data-caption-large="台灣TVBS總經理李濤(左)與李艷秋夫婦現身洛城，在僑界頗負盛名的他們特地藉由世界日報向讀者問好。(記者陳盈霖/攝影)">
-    <img loading="lazy" referrerpolicy="no-referrer" src="https://lh3.googleusercontent.com/d/1V-W5ac1XYgUu9Sg63bIgbkCbP0rToVA3=w1200" alt="李濤">
-    <div class="caption-small">台灣TVBS總經理李濤(左)與李艷秋夫婦現身洛城，在僑界頗負盛名的他們特地藉由世界日報向讀者問好。(記者陳盈霖/攝影)</div>
+  <div class="gallery-item" data-large="img/07.jpg" data-caption-large="照片 07">
+    <img src="img/07.jpg" alt="照片07">
+    <div class="caption-small">照片 07</div>
   </div>
 
-  <!-- ===== 照片 8 ===== -->
-  <div class="gallery-item" 
-       data-large="https://lh3.googleusercontent.com/d/18xcddnse7tqnLMLQvEw3UzPMKip_V6RS=w2000" 
-       data-caption-large="神探李昌鈺(右一)2005年為世界日報高球公開賽開球揭幕，左起為Alex Liu、諸立山、黎大海、李厚維、江文輝、Michael Lin、楊永明。(記者酈家驤/攝影)">
-    <img loading="lazy" referrerpolicy="no-referrer" src="https://lh3.googleusercontent.com/d/18xcddnse7tqnLMLQvEw3UzPMKip_V6RS=w1200" alt="李昌鈺">
-    <div class="caption-small">神探李昌鈺(右一)2005年為世界日報高球公開賽開球揭幕，左起為Alex Liu、諸立山、黎大海、李厚維、江文輝、Michael Lin、楊永明。(記者酈家驤/攝影)</div>
+  <div class="gallery-item" data-large="img/08.jpg" data-caption-large="照片 08">
+    <img src="img/08.jpg" alt="照片08">
+    <div class="caption-small">照片 08</div>
   </div>
 
-  <!-- ===== 照片 9 ===== -->
-  <div class="gallery-item" 
-       data-large="https://lh3.googleusercontent.com/d/1m7_OU-ST8cFdeaNa3yWvcQOmK5FJ3Kv9=w2000" 
-       data-caption-large="趙小蘭2005年11月在紐約華埠推廣聯邦新的處方藥制度，世界日報與世界周刊以封面專題報導。圖中右起為趙小蘭妹妹趙安吉、父親趙錫成、趙小蘭、世界日報紐約社助理社長李德怡。(記者許振輝/攝影)">
-    <img loading="lazy" referrerpolicy="no-referrer" src="https://lh3.googleusercontent.com/d/1m7_OU-ST8cFdeaNa3yWvcQOmK5FJ3Kv9=w1200" alt="趙小蘭">
-    <div class="caption-small">趙小蘭2005年11月在紐約華埠推廣聯邦新的處方藥制度，世界日報與世界周刊以封面專題報導。圖中右起為趙小蘭妹妹趙安吉、父親趙錫成、趙小蘭、世界日報紐約社助理社長李德怡。(記者許振輝/攝影)</div>
+  <div class="gallery-item" data-large="img/09.jpg" data-caption-large="照片 09">
+    <img src="img/09.jpg" alt="照片09">
+    <div class="caption-small">照片 09</div>
   </div>
 
-  <!-- ===== 照片 10 ===== -->
-  <div class="gallery-item" 
-       data-large="https://lh3.googleusercontent.com/d/1EX508-lVxxjr_pLYZRgSduGY4tnpO7qN=w2000" 
-       data-caption-large="劉玉玲在紐約市接受世界日報30周年社慶的「名人專訪」。(記者許振輝/攝影)">
-    <img loading="lazy" referrerpolicy="no-referrer" src="https://lh3.googleusercontent.com/d/1EX508-lVxxjr_pLYZRgSduGY4tnpO7qN=w1200" alt="劉玉玲">
-    <div class="caption-small">劉玉玲在紐約市接受世界日報30周年社慶的「名人專訪」。(記者許振輝/攝影)</div>
+  <div class="gallery-item" data-large="img/10.jpg" data-caption-large="照片 10">
+    <img src="img/10.jpg" alt="照片10">
+    <div class="caption-small">照片 10</div>
   </div>
 
-  <!-- ===== 照片 11 ===== -->
-  <div class="gallery-item" 
-       data-large="https://lh3.googleusercontent.com/d/1ayGmbdlTLw-OuNAUPl1adNFJfh7oA041=w2000" 
-       data-caption-large="慶祝報社成立30周年，洛杉磯世界日報18日邀請國際知名「朱宗慶打擊樂團」進行演出…(記者朱懷明/攝影)">
-    <img loading="lazy" referrerpolicy="no-referrer" src="https://lh3.googleusercontent.com/d/1ayGmbdlTLw-OuNAUPl1adNFJfh7oA041=w1200" alt="朱宗慶">
-    <div class="caption-small">慶祝報社成立30周年，洛杉磯世界日報18日邀請國際知名「朱宗慶打擊樂團」進行演出…(記者朱懷明/攝影)</div>
+  <div class="gallery-item" data-large="img/11.jpg" data-caption-large="照片 11">
+    <img src="img/11.jpg" alt="照片11">
+    <div class="caption-small">照片 11</div>
   </div>
 
-  <!-- ===== 照片 12 ===== -->
-  <div class="gallery-item" 
-       data-large="https://lh3.googleusercontent.com/d/15uhE1Sx8jS4wR9jb80rvwWs0R0qvMjb3=w2000" 
-       data-caption-large="世界日報30周年巨星慈善演唱會記者會…">
-    <img loading="lazy" referrerpolicy="no-referrer" src="https://lh3.googleusercontent.com/d/15uhE1Sx8jS4wR9jb80rvwWs0R0qvMjb3=w1200" alt="王芷蕾">
-    <div class="caption-small">世界日報30周年巨星慈善演唱會記者會…</div>
+  <div class="gallery-item" data-large="img/12.jpg" data-caption-large="照片 12">
+    <img src="img/12.jpg" alt="照片12">
+    <div class="caption-small">照片 12</div>
   </div>
 
-  <!-- ===== 照片 13 ===== -->
-  <div class="gallery-item" 
-       data-large="https://lh3.googleusercontent.com/d/1im4FsO7l3RSbrGbGqAr4hozKmp7TDtuy=w2000" 
-       data-caption-large="馬英九2006年抵達洛杉磯機場…(記者余寧/攝影)">
-    <img loading="lazy" referrerpolicy="no-referrer" src="https://lh3.googleusercontent.com/d/1im4FsO7l3RSbrGbGqAr4hozKmp7TDtuy=w1200" alt="馬英九">
-    <div class="caption-small">馬英九2006年抵達洛杉磯機場…(記者余寧/攝影)</div>
+  <div class="gallery-item" data-large="img/13.jpg" data-caption-large="照片 13">
+    <img src="img/13.jpg" alt="照片13">
+    <div class="caption-small">照片 13</div>
   </div>
 
-  <!-- ===== 照片 14 ===== -->
-  <div class="gallery-item" 
-       data-large="https://lh3.googleusercontent.com/d/1ltMhDGxZ5O1F_g5rYPmjnBn8HFqEk4AB=w2000" 
-       data-caption-large="陳士駿(右)與媽媽嚴以慈…(記者高蘭馨/攝影)">
-    <img loading="lazy" referrerpolicy="no-referrer" src="https://lh3.googleusercontent.com/d/1ltMhDGxZ5O1F_g5rYPmjnBn8HFqEk4AB=w1200" alt="陳士駿">
-    <div class="caption-small">陳士駿(右)與媽媽嚴以慈…(記者高蘭馨/攝影)</div>
+  <div class="gallery-item" data-large="img/14.jpg" data-caption-large="照片 14">
+    <img src="img/14.jpg" alt="照片14">
+    <div class="caption-small">照片 14</div>
   </div>
 
-  <!-- ===== 照片 15 ===== -->
-  <div class="gallery-item" 
-       data-large="https://lh3.googleusercontent.com/d/1LCgLhKE3ExaqWhM_Jmpq6VjK7alBiuio=w2000" 
-       data-caption-large="舊金山市長紐森(右)2007年參訪舊金山世界日報…(記者高蘭馨/攝影)">
-    <img loading="lazy" referrerpolicy="no-referrer" src="https://lh3.googleusercontent.com/d/1LCgLhKE3ExaqWhM_Jmpq6VjK7alBiuio=w1200" alt="紐森">
-    <div class="caption-small">舊金山市長紐森(右)2007年參訪舊金山世界日報…(記者高蘭馨/攝影)</div>
+  <div class="gallery-item" data-large="img/15.jpg" data-caption-large="照片 15">
+    <img src="img/15.jpg" alt="照片15">
+    <div class="caption-small">照片 15</div>
   </div>
 
-  <!-- ===== 照片 16 ===== -->
-  <div class="gallery-item" 
-       data-large="https://lh3.googleusercontent.com/d/1EDcA4eu3Lc8FTsnAJsqkfOckB8NXglkO=w2000" 
-       data-caption-large="職棒選手王建民…(記者楊海光/攝影)">
-    <img loading="lazy" referrerpolicy="no-referrer" src="https://lh3.googleusercontent.com/d/1EDcA4eu3Lc8FTsnAJsqkfOckB8NXglkO=w1200" alt="王建民">
-    <div class="caption-small">職棒選手王建民…(記者楊海光/攝影)</div>
+  <div class="gallery-item" data-large="img/16.jpg" data-caption-large="照片 16">
+    <img src="img/16.jpg" alt="照片16">
+    <div class="caption-small">照片 16</div>
   </div>
 
-  <!-- 其餘項目可照同樣格式繼續貼上，將原本的檔案 ID 換到兩個連結中即可 -->
+  <div class="gallery-item" data-large="img/17.jpg" data-caption-large="照片 17">
+    <img src="img/17.jpg" alt="照片17">
+    <div class="caption-small">照片 17</div>
+  </div>
+
+  <div class="gallery-item" data-large="img/18.jpg" data-caption-large="照片 18">
+    <img src="img/18.jpg" alt="照片18">
+    <div class="caption-small">照片 18</div>
+  </div>
+
+  <div class="gallery-item" data-large="img/19.jpg" data-caption-large="照片 19">
+    <img src="img/19.jpg" alt="照片19">
+    <div class="caption-small">照片 19</div>
+  </div>
+
+  <div class="gallery-item" data-large="img/20.jpg" data-caption-large="照片 20">
+    <img src="img/20.jpg" alt="照片20">
+    <div class="caption-small">照片 20</div>
+  </div>
+
+  <div class="gallery-item" data-large="img/21.jpg" data-caption-large="照片 21">
+    <img src="img/21.jpg" alt="照片21">
+    <div class="caption-small">照片 21</div>
+  </div>
+
+  <div class="gallery-item" data-large="img/22.jpg" data-caption-large="照片 22">
+    <img src="img/22.jpg" alt="照片22">
+    <div class="caption-small">照片 22</div>
+  </div>
+
+  <div class="gallery-item" data-large="img/23.jpg" data-caption-large="照片 23">
+    <img src="img/23.jpg" alt="照片23">
+    <div class="caption-small">照片 23</div>
+  </div>
+
+  <div class="gallery-item" data-large="img/24.jpg" data-caption-large="照片 24">
+    <img src="img/24.jpg" alt="照片24">
+    <div class="caption-small">照片 24</div>
+  </div>
+
+  <div class="gallery-item" data-large="img/25.jpg" data-caption-large="照片 25">
+    <img src="img/25.jpg" alt="照片25">
+    <div class="caption-small">照片 25</div>
+  </div>
+
+  <div class="gallery-item" data-large="img/26.jpg" data-caption-large="照片 26">
+    <img src="img/26.jpg" alt="照片26">
+    <div class="caption-small">照片 26</div>
+  </div>
+
+  <div class="gallery-item" data-large="img/27.jpg" data-caption-large="照片 27">
+    <img src="img/27.jpg" alt="照片27">
+    <div class="caption-small">照片 27</div>
+  </div>
+
+  <div class="gallery-item" data-large="img/28.jpg" data-caption-large="照片 28">
+    <img src="img/28.jpg" alt="照片28">
+    <div class="caption-small">照片 28</div>
+  </div>
+
+  <div class="gallery-item" data-large="img/29.jpg" data-caption-large="照片 29">
+    <img src="img/29.jpg" alt="照片29">
+    <div class="caption-small">照片 29</div>
+  </div>
+
+  <div class="gallery-item" data-large="img/30.jpg" data-caption-large="照片 30">
+    <img src="img/30.jpg" alt="照片30">
+    <div class="caption-small">照片 30</div>
+  </div>
+
+  <div class="gallery-item" data-large="img/31.jpg" data-caption-large="照片 31">
+    <img src="img/31.jpg" alt="照片31">
+    <div class="caption-small">照片 31</div>
+  </div>
+
+  <div class="gallery-item" data-large="img/32.jpg" data-caption-large="照片 32">
+    <img src="img/32.jpg" alt="照片32">
+    <div class="caption-small">照片 32</div>
+  </div>
+
 </div>
 
 <!-- Lightbox -->
