--- a/index.html
+++ b/index.html
@@ -211,6 +211,12 @@
     <img loading="lazy" src="img/32.jpg" alt="余英時">
     <div class="caption-small">歷史學家余英時2013年在普林斯頓寓所接受世界日報訪問。(陳麗卿/攝影)</div>
   </div>
+  <!-- 33 -->
+<div class="gallery-item" data-large="img/33.jpg" data-caption-large="大胃王小林尊2018年攝於紐約。(記者王若馨／攝影)">
+  <img loading="lazy" src="img/33.jpg" alt="小林尊">
+  <div class="caption-small">大胃王小林尊2018年攝於紐約。(記者王若馨／攝影)</div>
+</div>
+
 </div>
 
 <!-- Lightbox -->
