--- a/index.html
+++ b/index.html
@@ -212,18 +212,23 @@
     <div class="caption-small">歷史學家余英時2013年在普林斯頓寓所接受世界日報訪問。(陳麗卿/攝影)</div>
   </div>
   <!-- 33 -->
-<div class="gallery-item" data-large="img/33.jpg" data-caption-large="大胃王小林尊2018年攝於紐約。(記者王若馨╱攝影)">
-  <img loading="lazy" src="img/33.jpg" alt="小林尊">
+  <div class="gallery-item" data-large="img/33.jpg" data-caption-large="前花樣滑冰皇后關穎珊19日拜會洛杉磯世界日報社長郭俊良，透露夫婿包禮圖將於2014年競選羅德島州州長。（記者楊青攝影）">
+    <img loading="lazy" src="img/33.jpg" alt="關穎珊">
+    <div class="caption-small">前花樣滑冰皇后關穎珊19日拜會洛杉磯世界日報社長郭俊良，透露夫婿包禮圖將於2014年競選羅德島州州長。（記者楊青攝影）</div>
+  </div>
+  <!-- 34 -->
+<div class="gallery-item" data-large="img/34.jpg" data-caption-large="大胃王小林尊2018年攝於紐約。(記者王若馨╱攝影)">
+  <img loading="lazy" src="img/34.jpg" alt="小林尊">
   <div class="caption-small">大胃王小林尊2018年攝於紐約。(記者王若馨╱攝影)</div>
 </div>
-<!-- 34 -->
-<div class="gallery-item" data-large="img/34.jpg" data-caption-large="台灣書法家董陽孜2024年出席大都會藝術博物館「大廳委約新作：董陽孜-對話」展開幕典禮。(記者馬璿／攝影)">
-  <img loading="lazy" src="img/34.jpg" alt="董陽孜">
+<!-- 35 -->
+<div class="gallery-item" data-large="img/35.jpg" data-caption-large="台灣書法家董陽孜2024年出席大都會藝術博物館「大廳委約新作：董陽孜-對話」展開幕典禮。(記者馬璿／攝影)">
+  <img loading="lazy" src="img/35.jpg" alt="董陽孜">
   <div class="caption-small">台灣書法家董陽孜2024年出席大都會藝術博物館「大廳委約新作：董陽孜-對話」展開幕典禮。(記者馬璿╱攝影)</div>
 </div>
-  <!-- 35 -->
-<div class="gallery-item" data-large="img/35.jpg" data-caption-large="作家王鼎鈞2025年接受世界日報採訪。(記者何振忠╱攝影)">
-  <img loading="lazy" src="img/35.jpg" alt="王鼎鈞">
+  <!-- 36 -->
+<div class="gallery-item" data-large="img/36.jpg" data-caption-large="作家王鼎鈞2025年接受世界日報採訪。(記者何振忠╱攝影)">
+  <img loading="lazy" src="img/36.jpg" alt="王鼎鈞">
   <div class="caption-small">作家王鼎鈞2025年接受世界日報採訪。(記者何振忠╱攝影)</div>
 </div>
 </div>
