--- a/index.html
+++ b/index.html
@@ -248,6 +248,11 @@
   <img loading="lazy" src="img/39.JPG" alt="霍楚">
   <div class="caption-small">紐約州長霍楚(左)拜訪世界日報，與社長張漢昇(右)會談。（記者陳小寧╱攝影)</div>
 </div>
+ <!-- 40 -->
+<div class="gallery-item" data-large="img/40.JPG" data-caption-large="新北市長侯友宜一早看到世界日報，盯著內文直呼，「居然跟蹤我」（記者侯俐安╱攝影）">
+  <img loading="lazy" src="img/40.JPG" alt="侯友宜">
+  <div class="caption-small">新北市長侯友宜一早看到世界日報，盯著內文直呼，「居然跟蹤我」（記者侯俐安╱攝影）</div>
+</div>
   
 <!-- Lightbox -->
 <div class="lightbox" id="lightbox" aria-modal="true" role="dialog">
