--- a/index.html
+++ b/index.html
@@ -121,6 +121,11 @@
     <img loading="lazy" src="img/14.jpg" alt="林正盛">
     <div class="caption-small">林正盛導演與女友韓淑華二人2009年在接受採訪後於世界日報夏威夷辦事處門口所攝。(記者高振華/攝影)</div>
   </div>
+<!-- 38 -->
+<div class="gallery-item" data-large="img/38.JPG" data-caption-large="榮獲諾貝爾物理學獎的「光纖之父」高錕在家中開心看世界日報。(記者吳日君╱攝影)">
+  <img loading="lazy" src="img/38.JPG" alt="高錕">
+  <div class="caption-small">榮獲諾貝爾物理學獎的「光纖之父」高錕在家中開心看世界日報。(記者吳日君╱攝影)</div>
+</div>  
   <!-- 15 -->
   <div class="gallery-item" data-large="img/15.jpg" data-caption-large="張德培在「世界日報」上簽名，並祝本報讀者中秋節快樂。(記者劉庠/攝影)">
     <img loading="lazy" src="img/15.jpg" alt="張德培">
@@ -233,16 +238,11 @@
 </div>
 
   <!-- 37 -->
-<div class="gallery-item" data-large="img/37.JPG" data-caption-large="加拿大前總理杜魯道為世界日報撰寫專欄，圖為他開心地翻看經中譯的文章。（記者倪怡婧╱攝影）">
-  <img loading="lazy" src="img/37.JPG" alt="杜魯道">
-  <div class="caption-small">加拿大前總理杜魯道為世界日報撰寫專欄，圖為他開心地翻看經中譯的文章。（記者倪怡婧╱攝影)</div>
+<div class="gallery-item" data-large="img/37.JPG" data-caption-large="加拿大前總理杜魯多為世界日報撰寫專欄，圖為他開心地翻看經中譯的文章。（記者倪怡婧╱攝影）">
+  <img loading="lazy" src="img/37.JPG" alt="杜魯多">
+  <div class="caption-small">加拿大前總理杜魯多為世界日報撰寫專欄，圖為他開心地翻看經中譯的文章。（記者倪怡婧╱攝影)</div>
 </div>
 
-  <!-- 38 -->
-<div class="gallery-item" data-large="img/38.JPG" data-caption-large="榮獲諾貝爾物理學獎的「光纖之父」高錕在家中開心看世界日報。(記者吳日君╱攝影)">
-  <img loading="lazy" src="img/38.JPG" alt="高錕">
-  <div class="caption-small">榮獲諾貝爾物理學獎的「光纖之父」高錕在家中開心看世界日報。(記者吳日君╱攝影)</div>
-</div>
   <!-- 39 -->
 <div class="gallery-item" data-large="img/39.JPG" data-caption-large="紐約州長霍楚(左)拜訪世界日報，與社長張漢昇(右)會談。（記者陳小寧╱攝影)">
   <img loading="lazy" src="img/39.JPG" alt="霍楚">
