--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 <!-- 38 -->
 <div class="gallery-item" data-large="img/38.JPG" data-caption-large="榮獲諾貝爾物理學獎的「光纖之父」高錕在家中開心看世界日報。(記者吳日君╱攝影)">
   <img loading="lazy" src="img/38.JPG" alt="高錕">
-  <div class="caption-small">榮獲諾貝爾物理學獎的「光纖之父」高錕在家中開心看世界日報。(記者吳日君╱攝影)</div>
+  <div class="caption-small">榮獲諾貝爾物理學獎的「光纖之父」高錕2009年在家中開心看世界日報。(記者吳日君╱攝影)</div>
 </div>  
   <!-- 15 -->
   <div class="gallery-item" data-large="img/15.jpg" data-caption-large="張德培在「世界日報」上簽名，並祝本報讀者中秋節快樂。(記者劉庠/攝影)">
@@ -217,9 +217,9 @@
     <div class="caption-small">歷史學家余英時2013年在普林斯頓寓所接受世界日報訪問。(陳麗卿/攝影)</div>
   </div>
     <!-- 37 -->
-<div class="gallery-item" data-large="img/37.JPG" data-caption-large="加拿大前總理杜魯多為世界日報撰寫專欄，圖為他開心地翻看經中譯的文章。（記者倪怡婧╱攝影）">
+<div class="gallery-item" data-large="img/37.JPG" data-caption-large="加拿大前總理杜魯多為世界日報撰寫專欄，圖為他開心地翻看經過中譯的文章。（記者倪怡婧╱攝影）">
   <img loading="lazy" src="img/37.JPG" alt="杜魯多">
-  <div class="caption-small">加拿大前總理杜魯多為世界日報撰寫專欄，圖為他開心地翻看經中譯的文章。（記者倪怡婧╱攝影)</div>
+  <div class="caption-small">加拿大前總理杜魯多2013年為世界日報撰寫專欄，圖為他開心地翻看經過中譯的文章。（記者倪怡婧╱攝影)</div>
 </div>
   <!-- 33 -->
   <div class="gallery-item" data-large="img/33.jpg" data-caption-large="前花樣滑冰皇后關穎珊19日拜會洛杉磯世界日報社長郭俊良，透露夫婿包禮圖將於2014年競選羅德島州州長。（記者楊青攝影）">
@@ -234,12 +234,12 @@
  <!-- 39 -->
 <div class="gallery-item" data-large="img/39.JPG" data-caption-large="紐約州長霍楚(左)拜訪世界日報，與社長張漢昇(右)會談。（記者陳小寧╱攝影)">
   <img loading="lazy" src="img/39.JPG" alt="霍楚">
-  <div class="caption-small">紐約州長霍楚(左)拜訪世界日報，與社長張漢昇(右)會談。（記者陳小寧╱攝影)</div>
+  <div class="caption-small">紐約州長霍楚(左)2018年拜訪世界日報，與社長張漢昇(右)會談。（記者陳小寧╱攝影)</div>
 </div>
    <!-- 40 -->
 <div class="gallery-item" data-large="img/40.jpg" data-caption-large="新北市長侯友宜一早看到世界日報，盯著內文直呼，「居然跟蹤我」（記者侯俐安╱攝影）">
   <img loading="lazy" src="img/40.jpg" alt="侯友宜">
-  <div class="caption-small">新北市長侯友宜一早看到世界日報，盯著內文直呼，「居然跟蹤我」（記者侯俐安╱攝影）</div>
+  <div class="caption-small">新北市長侯友宜2023年一早看到世界日報，盯著內文直呼，「居然跟蹤我」（記者侯俐安╱攝影）</div>
 </div>
   <!-- 35 -->
 <div class="gallery-item" data-large="img/35.jpg" data-caption-large="台灣書法家董陽孜2024年出席大都會藝術博物館「大廳委約新作：董陽孜-對話」展開幕典禮。(記者馬璿／攝影)">
