--- a/index.html
+++ b/index.html
@@ -236,6 +236,11 @@
   <img loading="lazy" src="img/39.JPG" alt="霍楚">
   <div class="caption-small">紐約州長霍楚(左)2018年拜訪世界日報，與社長張漢昇(右)會談。（記者陳小寧╱攝影)</div>
 </div>
+  <!-- 41 -->
+  <div class="gallery-item" data-large="img/41.jpg" data-caption-large="宣布爭取民主黨提名參選2020年美國總統的華裔企業家楊安澤，2018年接受世界日報專訪。(特約記者許振輝／攝影)">
+  <img loading="lazy" src="img/41.jpg" alt="楊安澤">
+  <div class="caption-small">宣布爭取民主黨提名參選2020年美國總統的華裔企業家楊安澤，2018年接受世界日報專訪。(特約記者許振輝／攝影)</div>
+</div>
    <!-- 40 -->
 <div class="gallery-item" data-large="img/40.jpg" data-caption-large="新北市長侯友宜一早看到世界日報，盯著內文直呼，「居然跟蹤我」（記者侯俐安╱攝影）">
   <img loading="lazy" src="img/40.jpg" alt="侯友宜">
