--- a/index.html
+++ b/index.html
@@ -101,6 +101,12 @@
     <img loading="lazy" src="img/11.jpg" alt="王建民">
     <div class="caption-small">職棒選手王建民、舊金山經文處長廖偉平和世界日報公關經理何怡平，在舊金山巨人棒球隊主場。(記者楊海光/攝影)</div>
   </div>
+
+  <!-- 10-1 -->
+  <div class="gallery-item" data-large="img/10-1.jpg" data-caption-large="世界日報舊金山社社長宋晶宜受邀參加在沙加緬度的馬侃籌款餐會，與加州州長史瓦辛格合影。(本報資料照)">
+    <img loading="lazy" src="img/10-1.jpg" alt=阿諾">
+    <div class="caption-small">世界日報舊金山社社長宋晶宜受邀參加在沙加緬度的馬侃籌款餐會，與加州州長史瓦辛格合影。(本報資料照)</div>
+  </div>
   <!-- 12 -->
   <div class="gallery-item" data-large="img/12.jpg" data-caption-large="錢永健2008年在辦公室接受世界日報專訪。(記者李大明/攝影)">
     <img loading="lazy" src="img/12.jpg" alt="錢永健">
