--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
   </div>
 
   <!-- 10-1 -->
-  <div class="gallery-item" data-large="img/10-1.jpg" data-caption-large="世界日報舊金山社社長宋晶宜受邀參加在沙加緬度的馬侃籌款餐會，與加州州長史瓦辛格合影。(本報資料照)">
-    <img loading="lazy" src="img/10-1.jpg" alt=阿諾">
+  <div class="gallery-item" data-large="img/10-1.JPG" data-caption-large="世界日報舊金山社社長宋晶宜受邀參加在沙加緬度的馬侃籌款餐會，與加州州長史瓦辛格合影。(本報資料照)">
+    <img loading="lazy" src="img/10-1.JPG" alt=阿諾">
     <div class="caption-small">世界日報舊金山社社長宋晶宜受邀參加在沙加緬度的馬侃籌款餐會，與加州州長史瓦辛格合影。(本報資料照)</div>
   </div>
   <!-- 12 -->
