--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <div class="caption-small">台灣TVBS總經理李濤(左)與李艷秋夫婦2005年現身洛城，在僑界頗負盛名的他們特地藉由世界日報向讀者問好。(記者陳盈霖/攝影)</div>
   </div>
   <!-- 05 -->
-  <div class="gallery-item" data-large="img/05.jpg" data-caption-large="神探李昌鈺(右一)2005年為世界日報高球公開賽開球揭幕，左起為Alex Liu、諸立山、黎大海、李厚維、江文輝、Michael Lin、楊永明。(記者酈家驤/攝影)">
+  <div class="gallery-item" data-large="img/05.jpg" data-caption-large="李昌鈺博士分享他工作及轉行的心得，指導華人如何在工作中找到自身定位、脫穎而出。(記者朱蕾／攝影)">
     <img loading="lazy" src="img/05.jpg" alt="李昌鈺">
     <div class="caption-small">神探李昌鈺(右一)2005年為世界日報高球公開賽開球揭幕，左起為Alex Liu、諸立山、黎大海、李厚維、江文輝、Michael Lin、楊永明。(記者酈家驤/攝影)</div>
   </div>
