--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   <!-- 05 -->
   <div class="gallery-item" data-large="img/05.jpg" data-caption-large="李昌鈺博士分享他工作及轉行的心得，指導華人如何在工作中找到自身定位、脫穎而出。(記者朱蕾／攝影)">
     <img loading="lazy" src="img/05.jpg" alt="李昌鈺">
-    <div class="caption-small">神探李昌鈺(右一)2005年為世界日報高球公開賽開球揭幕，左起為Alex Liu、諸立山、黎大海、李厚維、江文輝、Michael Lin、楊永明。(記者酈家驤/攝影)</div>
+    <div class="caption-small">李昌鈺博士分享他工作及轉行的心得，指導華人如何在工作中找到自身定位、脫穎而出。(記者朱蕾／攝影)</div>
   </div>
   <!-- 06 -->
   <div class="gallery-item" data-large="img/06.jpg" data-caption-large="趙小蘭2005年11月在紐約華埠推廣聯邦新的處方藥制度，世界日報與世界周刊以封面專題報導。圖中右起為趙小蘭妹妹趙安吉、父親趙錫成、趙小蘭、世界日報紐約社助理社長李德怡。(記者許振輝/攝影)">
