--- a/index.html
+++ b/index.html
@@ -222,9 +222,9 @@
     <img loading="lazy" src="img/33.jpg" alt="關穎珊">
     <div class="caption-small">前花樣滑冰皇后關穎珊19日拜會洛杉磯世界日報社長郭俊良，透露夫婿包禮圖將於2014年競選羅德島州州長。（記者楊青攝影）</div>
   </div>
-  <!-- 05 -->
-  <div class="gallery-item" data-large="img/05.jpg" data-caption-large="李昌鈺博士分享他工作及轉行的心得，指導華人如何在工作中找到自身定位、脫穎而出。(記者朱蕾／攝影)">
-    <img loading="lazy" src="img/05.jpg" alt="李昌鈺">
+  <!-- 05 (2) -->
+  <div class="gallery-item" data-large="img/05 (2).jpg" data-caption-large="李昌鈺博士分享他工作及轉行的心得，指導華人如何在工作中找到自身定位、脫穎而出。(記者朱蕾／攝影)">
+    <img loading="lazy" src="img/05 (2).jpg" alt="李昌鈺">
     <div class="caption-small">李昌鈺博士分享他工作及轉行的心得，指導華人如何在工作中找到自身定位、脫穎而出。(記者朱蕾／攝影)</div>
   </div>
   <!-- 34 -->
@@ -243,7 +243,7 @@
   <div class="caption-small">宣布爭取民主黨提名參選2020年美國總統的華裔企業家楊安澤，2018年接受世界日報專訪。(特約記者許振輝／攝影)</div>
 </div>
    <!-- 40 -->
-<div class="gallery-item" data-large="img/40.jpg" data-caption-large="新北市長侯友宜一早看到世界日報，盯著內文直呼，「居然跟蹤我」（記者侯俐安╱攝影）">
+<div class="gallery-item" data-large="img/40.jpg" data-caption-large="新北市長侯友宜一早看到世界日報，盯著內文直呼，「居然跟蹤我」。（記者侯俐安╱攝影）">
   <img loading="lazy" src="img/40.jpg" alt="侯友宜">
   <div class="caption-small">新北市長侯友宜2023年一早看到世界日報，盯著內文直呼，「居然跟蹤我」（記者侯俐安╱攝影）</div>
 </div>
